--- a/app/src/main/res/layout/activity_add_member_detail.xml
+++ b/app/src/main/res/layout/activity_add_member_detail.xml
@@ -73,7 +73,7 @@
             android:layout_width="match_parent"
             android:layout_height="120px"
             android:background="#ffffff"
-            android:tag="Showchoicebox(weizhi,位置,前锋-后卫-门将-后腰-边锋-边卫)">
+            android:tag="Showlistbox(weizhi,位置,前锋-后卫-门将-后腰-边锋-边卫)">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -116,7 +116,7 @@
             android:layout_width="match_parent"
             android:layout_height="120px"
             android:background="#ffffff"
-            android:tag="Showchoicebox(weizhi,号码,1->17)">
+            android:tag="Showlistbox(weizhi,号码,1->17)">
 
             <TextView
                 android:layout_width="wrap_content"
