--- a/app/src/main/res/layout/activity_set.xml
+++ b/app/src/main/res/layout/activity_set.xml
@@ -95,7 +95,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@color/white">
-        <RelativeLayout
+        <RelativeLayout android:id="@+id/rate"
             android:layout_width="match_parent"
             android:layout_height="120px">
 
