--- a/app/src/main/res/layout/adapter_courses.xml
+++ b/app/src/main/res/layout/adapter_courses.xml
@@ -6,22 +6,25 @@
 
     <ImageView
         android:id="@+id/course_img"
-        android:layout_width="400px"
-        android:layout_height="400px"
+        android:layout_width="425px"
+        android:layout_height="425px"
         android:layout_marginRight="30px"
         android:src="@mipmap/login_logo"
-        android:scaleType="fitXY"/>
+        android:scaleType="fitXY"
+        android:layout_marginBottom="40px"/>
 
     <TextView
         android:id="@+id/course_name"
-        android:layout_width="400px"
+        android:layout_width="425px"
         android:layout_height="wrap_content"
         android:layout_marginTop="10px"
         android:text="青训课程标题"
         android:textColor="@color/black"
         android:ellipsize="marquee"
         android:lines="1"
-        android:textSize="45px" />
+        android:textSize="45px"
+        android:layout_marginBottom="20px"
+        />
 
     <TextView
         android:id="@+id/course_money"
