--- a/app/src/main/res/layout/adapter_news.xml
+++ b/app/src/main/res/layout/adapter_news.xml
@@ -5,63 +5,75 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_marginTop="40px"
-        android:layout_marginLeft="40px"
-        android:layout_marginRight="40px"
-        android:layout_marginBottom="40px"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="60px"
+        android:layout_marginLeft="40px"
+        android:layout_marginRight="40px"
+        android:layout_marginTop="40px"
         android:gravity="center_vertical"
         android:orientation="horizontal">
+
         <ImageView
             android:id="@+id/news_img"
+            android:layout_width="350px"
+            android:layout_height="350px"
             android:layout_gravity="center_vertical"
-            android:layout_width="90dip"
-            android:layout_height="90dip"
             android:scaleType="fitXY"
             android:src="@mipmap/login_logo" />
+
         <LinearLayout
-            android:gravity="center_vertical"
-            android:layout_marginLeft="40px"
+
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="350px"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="40px"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/news_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="2"
                 android:text="资讯信息资讯信息"
-                android:textSize="45px"
-                android:textColor="@color/black"/>
+                android:textColor="@color/black"
+                android:textSize="45px" />
+
             <TextView
                 android:id="@+id/news_dis"
-                android:layout_marginTop="10px"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="息资讯信息资讯信息"
-                android:textSize="38px"
-                android:textColor="@color/text_gray"/>
-            <RelativeLayout
                 android:layout_marginTop="10px"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:text="息资讯信息资讯信息"
+                android:textColor="@color/text_gray"
+                android:textSize="38px" />
+
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent"
+                android:layout_marginTop="10px"
+                android:gravity="bottom">
+
                 <TextView
                     android:id="@+id/news_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="2017-12-12"
-                    android:textSize="38px"
-                    android:textColor="@color/text_gray"/>
+                    android:textColor="@color/text_gray"
+                    android:textSize="38px" />
+
                 <TextView
                     android:id="@+id/news_hint"
-                    android:layout_alignParentRight="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="阅读 121"
-                    android:textSize="38px"
+                    android:layout_alignParentRight="true"
                     android:layout_marginRight="40px"
-                    android:textColor="@color/text_gray"/>
+                    android:text="阅读 121"
+                    android:textColor="@color/text_gray"
+                    android:textSize="38px" />
 
 
             </RelativeLayout>
