--- a/app/src/main/res/layout/consult_layout.xml
+++ b/app/src/main/res/layout/consult_layout.xml
@@ -188,7 +188,7 @@
             android:layout_height="0.5dp"
             android:background="@color/diver_color"
             />
-        <LinearLayout
+        <LinearLayout android:id="@+id/send_comment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
