--- a/app/src/main/res/layout/fragment_ss.xml
+++ b/app/src/main/res/layout/fragment_ss.xml
@@ -6,8 +6,7 @@
     android:orientation="vertical">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="140px"
-        android:background="@color/theme_color"
+        android:layout_height="145px"         android:background="@color/theme_color"
         android:orientation="horizontal">
 
         <TextView
