--- a/app/src/main/res/layout/fragment_zx.xml
+++ b/app/src/main/res/layout/fragment_zx.xml
@@ -1,37 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="140px"
-        android:background="@color/theme_color"
+        android:layout_height="145px"         android:background="@color/theme_color"
         android:orientation="horizontal">
 
         <LinearLayout
             android:id="@+id/zx_ll_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_centerVertical="true"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/zx_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="上海市"
-                android:textSize="45px"
                 android:layout_marginLeft="20px"
                 android:layout_marginRight="20px"
-                android:textColor="@color/white"/>
+                android:text="上海市"
+                android:textColor="@color/white"
+                android:textSize="45px" />
+
             <ImageView
-                android:layout_toRightOf="@+id/zx_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/zx_jiantou_down"/>
+                android:layout_toRightOf="@+id/zx_location"
+                android:src="@mipmap/zx_jiantou_down" />
         </LinearLayout>
 
 
@@ -45,30 +46,38 @@
 
 
     </RelativeLayout>
-    <top.smartsport.www.widget.PagerSlidingTabStrip
-        android:id="@+id/zx_tab"
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="136px"
-        app:contentTextColor="@color/theme_color"
-        app:pstsIndicatorColor="@color/theme_color"
-        app:pstsIndicatorHeight="2px"
-        android:background="@color/white"
-        app:contentUnselectedTextColor="@color/black"
-        app:contentTextSize="58px"
-        app:contentSelectedTextColor="@color/theme_color"
-        app:pstsUnderlineColor="@color/text_gray"
-        app:pstsShouldExpand="true"
-        app:pstsUnderlineHeight="0px"
-        app:pstsTabPaddingLeftRight="4px"
-        android:fillViewport="false"
-        />
+        android:layout_height="wrap_content"
+        android:background="@color/white">
+
+        <top.smartsport.www.widget.PagerSlidingTabStrip
+            android:id="@+id/zx_tab"
+            android:layout_width="match_parent"
+            android:layout_height="136px"
+            android:layout_marginLeft="80px"
+            android:layout_marginRight="80px"
+            android:background="@color/white"
+            android:fillViewport="false"
+            app:contentSelectedTextColor="@color/theme_color"
+            app:contentTextColor="@color/theme_color"
+            app:contentTextSize="58px"
+            app:contentUnselectedTextColor="@color/black"
+            app:pstsIndicatorColor="@color/theme_color"
+            app:pstsIndicatorHeight="3px"
+            app:pstsShouldExpand="true"
+            app:pstsTabPaddingLeftRight="10px"
+
+            app:pstsUnderlineColor="@color/text_gray"
+            app:pstsUnderlineHeight="0px" />
+    </FrameLayout>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/zx_viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/bg_gray"/>
-
+        android:background="@color/bg_gray" />
 
 
 </LinearLayout>
