--- a/app/src/main/res/layout/fragment_zxqx.xml
+++ b/app/src/main/res/layout/fragment_zxqx.xml
@@ -25,15 +25,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="100px"
                 android:gravity="center_vertical"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+
+                android:layout_marginTop="38px"
+                android:layout_marginBottom="35px">
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="推荐课程"
+                    android:layout_gravity="bottom"
                     android:layout_weight="1"
-                    android:layout_marginLeft="40px"
+                    android:layout_marginLeft="50px"
                     android:textColor="@color/black"
-                    android:textSize="58px"/>
+                    android:textSize="55px"
+                    android:textStyle="bold"
+                    android:letterSpacing="0.1"/>
 
                 <TextView
                     android:id="@+id/fm_text_qbkc"
@@ -44,7 +50,10 @@
                     android:layout_marginRight="40px"
                     android:layout_weight="1"
                     android:textColor="@color/theme_color"
-                    android:textSize="42px"/>
+                    android:textSize="42px"
+                    android:layout_gravity="bottom"
+                    android:textStyle="bold"
+                    android:letterSpacing="0.05"/>
 
             </LinearLayout>
 
@@ -56,18 +65,27 @@
                 android:layout_width="match_parent"
                 android:layout_height="600px"
                 android:listSelector="#00000000"
+                android:layout_marginLeft="50px"
                 android:layout_marginRight="40px"
-                android:layout_marginLeft="40px"
                 android:verticalSpacing="30px"
                 android:horizontalSpacing="30px"
                 />
 
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                 android:layout_marginTop="35px"
+                android:layout_marginBottom="35px">
+                <include layout="@layout/horizontal_line" />
+            </FrameLayout>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="58px"
-                android:layout_marginTop="20px"
-                android:layout_marginLeft="40px"
+                android:textSize="55px"
+                android:layout_marginLeft="50px"
+                android:layout_marginTop="15px"
+                android:layout_marginBottom="40px"
+                android:textStyle="bold"
                 android:textColor="@color/black"
                 android:text="青训资讯"/>
             <top.smartsport.www.widget.MyListView
@@ -76,20 +94,34 @@
                 android:layout_height="wrap_content"
                 android:scrollbars="none"/>
 
-
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="35px"
+                android:layout_marginBottom="35px">
+                <include layout="@layout/horizontal_line" />
+            </FrameLayout>
             <LinearLayout
                 android:layout_width="match_parent"
+
+
                 android:layout_height="100px"
                 android:gravity="center_vertical"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+
+                android:layout_marginTop="38px"
+                android:layout_marginBottom="35px">
                 <TextView
+
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="推荐教练"
                     android:layout_weight="1"
-                    android:layout_marginLeft="40px"
+                    android:layout_marginLeft="50px"
                     android:textColor="@color/black"
-                    android:textSize="58px"/>
+                    android:textSize="55px"
+                    android:textStyle="bold"
+                    android:layout_gravity="bottom"/>
 
                 <TextView
                     android:id="@+id/fm_text_"
@@ -100,7 +132,10 @@
                     android:layout_marginRight="40px"
                     android:layout_weight="1"
                     android:textColor="@color/theme_color"
-                    android:textSize="42px"/>
+                    android:textSize="42px"
+                    android:layout_gravity="bottom"
+                    android:textStyle="bold"
+                    android:letterSpacing="0.05"/>
 
             </LinearLayout>
 
@@ -110,64 +145,14 @@
                 android:layout_height="600px"
                 android:listSelector="#00000000"
                 android:layout_marginRight="40px"
-                android:layout_marginLeft="40px"
+                android:layout_marginLeft="50px"
                 android:verticalSpacing="30px"
                 android:horizontalSpacing="30px"/>
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-                <!--<ImageView-->
-                    <!--android:id="@+id/fm_img_qxzx"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_centerVertical="true"-->
-                    <!--android:src="@mipmap/login_logo"/>-->
-                <!--<LinearLayout-->
-                    <!--android:layout_toRightOf="@+id/fm_img_qxzx"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_marginLeft="20px"-->
-                    <!--android:layout_marginRight="40px"-->
-                    <!--android:orientation="vertical">-->
-                    <!--<TextView-->
-                        <!--android:id="@+id/fm_text_one_title"-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:textColor="@color/black"-->
-                        <!--android:textSize="45px"-->
-                        <!--android:text="青训资讯资讯资讯资讯资讯青训资讯资讯资讯资讯资讯青训资讯资讯资讯资讯资讯"/>-->
-                    <!--<TextView-->
-                        <!--android:id="@+id/fm_text_one_dis"-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:textColor="@color/text_gray"-->
-                        <!--android:textSize="42px"-->
-                        <!--android:text="描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述"/>-->
-                    <!--<LinearLayout-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:orientation="horizontal"-->
-                        <!--android:gravity="center_vertical">-->
-                        <!--<TextView-->
-                            <!--android:layout_width="0dp"-->
-                            <!--android:layout_weight="1"-->
-                            <!--android:layout_height="wrap_content"-->
-                            <!--android:text="2019-10-10"-->
-                            <!--android:textSize="42px"-->
-                            <!--android:textColor="@color/text_gray"/>-->
-                        <!--<TextView-->
-                            <!--android:layout_width="0dp"-->
-                            <!--android:layout_weight="1"-->
-                            <!--android:layout_height="wrap_content"-->
-                            <!--android:text="阅读100"-->
-                            <!--android:textSize="42px"-->
-                            <!--android:gravity="right"-->
-                            <!--android:textColor="@color/text_gray"/>-->
 
-                    <!--</LinearLayout>-->
-
-                <!--</LinearLayout>-->
                 <top.smartsport.www.widget.MyListView
                     android:id="@+id/fm_list_top_news"
                     android:layout_width="match_parent"
@@ -175,11 +160,21 @@
                     android:scrollbars="none"/>
 
             </RelativeLayout>
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="35px"
+                >
+                <include layout="@layout/horizontal_line" />
+            </FrameLayout>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="100px"
+                android:layout_height="145px"
                 android:gravity="center_vertical"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:paddingTop="20px"
+                android:background="@color/white"
+                android:paddingBottom="30px">
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -187,7 +182,10 @@
                     android:layout_weight="1"
                     android:layout_marginLeft="40px"
                     android:textColor="@color/black"
-                    android:textSize="58px"/>
+                    android:textSize="55px"
+                    android:layout_gravity="bottom"
+                    android:textStyle="bold"
+                    android:letterSpacing="0.1"/>
 
                 <TextView
 
@@ -198,7 +196,10 @@
                     android:layout_marginRight="40px"
                     android:layout_weight="1"
                     android:textColor="@color/theme_color"
-                    android:textSize="42px"/>
+                    android:textSize="42px"
+                    android:layout_gravity="bottom"
+                    android:textStyle="bold"
+                    android:letterSpacing="0.05"/>
 
             </LinearLayout>
             <include
