--- a/app/src/main/res/layout/layout_dot.xml
+++ b/app/src/main/res/layout/layout_dot.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <View xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="8dp"
-    android:layout_height="8dp"
-    android:layout_marginLeft="2dp"
-    android:layout_marginRight="2dp"
-    android:background="@drawable/dot_w" >
+    android:layout_width="6dp"
+    android:layout_height="6dp"
+    android:layout_marginLeft="7dp"
+    android:layout_marginRight="7dp"
+    android:background="@drawable/dot_w"
+>
 
 </View>
