--- a/app/src/main/res/layout/activity_add_member_detail.xml
+++ b/app/src/main/res/layout/activity_add_member_detail.xml
@@ -116,7 +116,7 @@
             android:layout_width="match_parent"
             android:layout_height="120px"
             android:background="#ffffff"
-            android:tag="Showlistbox(weizhi,号码,1->17)">
+            android:tag="Showlistbox(haoma,号码,1->17)">
 
             <TextView
                 android:layout_width="wrap_content"
