--- a/app/src/main/res/layout/layout_actionbar.xml
+++ b/app/src/main/res/layout/layout_actionbar.xml
@@ -37,7 +37,7 @@
         android:layout_centerVertical="true"
         android:layout_marginRight="10px"
         >
-        <ImageView
+        <TextView
             android:id="@+id/ivRight_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
