帐户设置 增加 个人头像的修改 (目前头像还未提交到后台)

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -109,4 +109,5 @@
         <item name="android:textColor">@color/text_gray</item>
     </style>
 
+    <style name="my_dialog" parent="android:Theme.Translucent.NoTitleBar"/>
 </resources>
