--- a/app/src/main/res/layout/activity_add_member_detail.xml
+++ b/app/src/main/res/layout/activity_add_member_detail.xml
@@ -29,6 +29,49 @@
         android:layout_below="@id/action_bar"
         android:orientation="vertical">
 
+        <RelativeLayout
+            android:id="@+id/account_set_rl"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:gravity="center_vertical">
+
+
+            <ImageView
+                android:id="@+id/account_header"
+                android:layout_width="213px"
+                android:layout_height="213px"
+                android:layout_marginBottom="40px"
+                android:layout_marginLeft="50px"
+                android:layout_marginTop="40px"
+                android:src="@mipmap/account_set_header" />
+
+            <TextView android:id="@+id/touxiang"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_marginLeft="50px"
+                android:layout_toRightOf="@+id/account_header"
+                android:text="更换头像"
+                android:textColor="@color/black"
+                android:textSize="45px" />
+
+            <LinearLayout
+                android:layout_width="150px"
+                android:layout_height="150px"
+                android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"
+                android:gravity="center">
+
+                <ImageView android:id="@+id/head"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/left_arrow" />
+            </LinearLayout>
+
+
+        </RelativeLayout>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
