编辑球员，收藏青训课程取关后移除列表

--- a/app/src/main/res/layout/member_list.xml
+++ b/app/src/main/res/layout/member_list.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/layout_height"
         app:laber_color="@color/font_main"
-        app:content_color="@color/font_gray"
+        app:content_color="@color/font_main"
+        app:laber="球员"
         app:content_hint_name="球员姓名"
         app:content_hint_location="位置"
         app:content_hint_number="球衣号码"
