--- a/app/src/main/res/layout/layout_actionbar.xml
+++ b/app/src/main/res/layout/layout_actionbar.xml
@@ -59,7 +59,7 @@
             android:paddingLeft="30px"
             android:paddingRight="30px"
             android:layout_marginRight="50px"
-            android:visibility="visible"
+            android:visibility="gone"
             />
     </LinearLayout>
 
