数据分析 积分榜 没数据的时候显示 暂无数据 & 个人资料 上传头像

--- a/app/src/main/res/layout/fragment_scoreboard.xml
+++ b/app/src/main/res/layout/fragment_scoreboard.xml
@@ -47,7 +47,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone"
+            android:visibility="invisible"
             android:id="@+id/empty">
 
             <LinearLayout
