--- a/app/src/main/res/layout/fragment_zxhd.xml
+++ b/app/src/main/res/layout/fragment_zxhd.xml
@@ -1,34 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.handmark.pulltorefresh.library.PullToRefreshListView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ptr="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/pull_to_refresh_list_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-    <com.handmark.pulltorefresh.library.PullToRefreshScrollView
-        android:id="@+id/mScrollView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-            <include
-                layout="@layout/layout_banner"
-                android:layout_width="match_parent"
-                android:layout_height="550px"
-                android:background="@color/white" />
-            <top.smartsport.www.widget.MyListView
-                android:id="@+id/ptrlv"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:dividerHeight="20px"
-                android:divider="@color/bg_gray"
-                android:scrollbars="none" />
-
-
-        </LinearLayout>
-
-    </com.handmark.pulltorefresh.library.PullToRefreshScrollView>
-
-
-</LinearLayout>
+    android:clipChildren="false"
+    android:divider="@null"
+    android:fillViewport="true"
+    android:horizontalSpacing="1dp"
+    android:scrollbars="none"
+    android:verticalSpacing="1dp"
+    ptr:ptrListViewExtrasEnabled="false"
+    ptr:ptrMode="both"/>
