--- a/app/src/main/res/layout/activity_bs_sign_up.xml
+++ b/app/src/main/res/layout/activity_bs_sign_up.xml
@@ -89,6 +89,7 @@
                     android:background="@color/colorGray"
                     android:layout_marginTop="10dp"/>
                 <com.zhy.autolayout.AutoLinearLayout
+                    android:id="@+id/buyvideo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@android:color/white"
