--- a/app/src/main/res/layout/activity_buy_vip.xml
+++ b/app/src/main/res/layout/activity_buy_vip.xml
@@ -25,6 +25,7 @@
             android:orientation="vertical">
 
             <com.zhy.autolayout.AutoLinearLayout
+                android:layout_marginTop="50px"
                 android:id="@+id/signup1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
